fix header flicker ios

--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,7 @@ body.with-Fonts {
 }
 
 header {
+    transform: translate3d(0,0,0);
     display: flex;
     position: fixed;
     top: 0;
